--- a/src/package.json
+++ b/src/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
+    "@types/dom-to-image": "^2.6.7",
     "ejs": "^3.1.10",
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "html2canvas": "^1.4.1"
   },
   "name": "src",
   "version": "1.0.0",
