--- a/src/vercel.json
+++ b/src/vercel.json
@@ -11,5 +11,11 @@
       "src": "/(.*)",
       "dest": "app.js"
     }
+  ],
+  "redirects":[
+    {
+      "source": "/cadastro",
+      "destination":"/cadastro"
+    }
   ]
 }
